--- a/PROJETO-CHECK-NORIS/PROJETO-01/app/src/main/res/layout/activity_main.xml
+++ b/PROJETO-CHECK-NORIS/PROJETO-01/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,9 @@
 
     <fragment
         android:id="@+id/fragmentContainer"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragmen"
         app:navGraph = "@navigation/nav_graph"
         app:defaultNavHost = "true"
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
